--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <body>
 
     <div class="container py-2">
-    <p>Input URL you want to check</p>
-    <input type="text" id="urlInput"/>
-    <button type="button" class="btn btn-primary mt-2" id="whois">Get info</button>
+    <!-- <p>Input URL you want to check</p> -->
+    <!-- <input type="text" id="urlInput"/> -->
+    <!-- <button type="button" class="btn btn-primary mt-2" id="whois">Get info</button> -->
+    <!-- <button type="button" class="btn btn-primary mt-2" id="hiddenElement">Show Hidden Elements</button> -->
 
     <div id="site-info" style="visibility: hidden" class="mt-3">
         <div className="row">
@@ -22,10 +23,10 @@
     </div>
 </div>
     <!-- <script src="bootstrap.bundle.min.js"> </script> -->
-    <!-- <script src="geturl.js"></script> -->
+    <script src="geturl.js"></script>
 
 
-    <script src="index.js"></script>
+    <!-- <script src="index.js"></script> -->
 
   </body>
 </html>
